--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ url: #https://nasil2n.github.io
 baseurl: /project
 
 # variables
-name: blogs\nasil2n
+name: blogs:\nasil2n
 description: lifestyle 
 google_verification: null
 
